iac/my-eks/kubernetes/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # API Python endpoints
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: python-api-service
            port:
              number: 8000
      # Dashboard principal (raiz)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-service
            port:
              number: 80
